--- a/src/app/enter/enter-secret/enter-secret.component.tns.html
+++ b/src/app/enter/enter-secret/enter-secret.component.tns.html
@@ -7,8 +7,7 @@
                maxLength="6"
                autocorrect="false"
                keyboardType="number"></TextField>
-    <Button (tap)="onCodeLogin()" col="1" row="0" text="Enter"></Button>
-    <Button (tap)="onScan()" col="0" colSpan="2" row="1" text="Scan QR"></Button>
+    <Button (tap)="onCodeLogin()" [isEnabled]="(code ? code.toString().length == 6 : false) && !pending" col="1" row="0" text="Enter" class="-primary"></Button>
+    <Button (tap)="onScan()" col="0" colSpan="2" row="1" text="Scan QR Code" class="-grey"></Button>
 </GridLayout>
 
-<!--<Button text="Scan QR code"></Button>-->
