--- a/src/app/home/competition/competition.component.tns.html
+++ b/src/app/home/competition/competition.component.tns.html
@@ -1,5 +1,7 @@
 <GridLayout columns="*" rows="auto, auto, *">
-    <Label [text]="'Use secret code'|L" col="0" row="0" horizontalAlignment="center"></Label>
+    <Label [text]="'Use secret code'|L" row="0" col="0" horizontalAlignment="center" class="h2 p-10"></Label>
+
+
     <StackLayout col="0" row="1">
         <app-enter-secret></app-enter-secret>
     </StackLayout>
